whitespace still an issue, added examples

--- a/inst/www/css/visually-hidden.css
+++ b/inst/www/css/visually-hidden.css
@@ -1,9 +1,6 @@
 /* Taken from the GOV.UK design system CSS and customised */
 .visually-hidden {
   position: absolute !important;
-  width: 1px !important;
-  height: 1px !important;
-  margin: -1px !important;
   padding: 0 !important;
   overflow: hidden !important;
   clip: rect(0 0 0 0) !important;
